fixed overflow! will pull request.

--- a/src/ui/_module/ui.scss
+++ b/src/ui/_module/ui.scss
@@ -4,6 +4,32 @@ html, body {
   font-family: $font-family;
   font-size: $base-font-size;
   color: $color-white;
+  overflow: hidden;
+}
+
+
+/* Let's get this party started */
+::-webkit-scrollbar {
+    width: 8px;
+    padding-bottom: 4px;
+}
+
+/* Track */
+::-webkit-scrollbar-track:horizontal {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.4);
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb:horizontal {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.4);
+    background: rgba(255,255,255,0.4);
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	background: rgba(255,255,255,0.4);
 }
 
 p {
@@ -329,7 +355,7 @@ width: 100%;
 }
 
 .modal-window__fields {
-	min-width: 350px;
+	min-width: 300px;
 	position: fixed;
   background-color:white;
   border-radius: 8px;
