--- a/src/ui/editor/edit-space/default-overlay/default-overlay.scss
+++ b/src/ui/editor/edit-space/default-overlay/default-overlay.scss
@@ -45,7 +45,7 @@
 .default-overlay__logo {
   margin-top: 16px;
   font-size: 2em;
-  font-weight: 400;
+  font-weight: 600;
   text-shadow: $text-shadow;
   position: absolute;
   top: 0%;
